--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,4 @@
+3.0.3 - WIP
 3.0.2 - add version 0.3.0b support, add relion plugin dependency for preprocess protocol
 3.0.0 - add missing pip files, fix installation
 3.0.0b4 - switch to emtable, same as relion plugin
