--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,12 @@
-3.0.4 - minor changes
+3.1:
+    - Update to use version 0.3.2, deprecated versions < 0.3.0
+    - protocol preprocess
+    - Allow to specify chunk of particle stacks
+    - Generate output CryoDrgnParticles
+    - protocol training
+    - Use import particles from preprocess
+    - Run basic analysis as another step
+    - viewer: does not run analysis now
 3.0.3:
  - add version 0.3.1
  - close #8, #9, #10
