--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,4 @@
+3.3: 0.3.3b added
 3.2:
     - 0.3.2b added
     - Use preprocess when chunks despite scaling, also use input star when no preprocess
