--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,6 @@
-3.5.2: add possible outputs class
+3.6:
+    - add possible outputs class
+    - update for versions 1.0.0, 1.1.0
 3.5.1: fix missing arg for training preprocessed particles
 3.5: 0.3.5 added
 3.4: 0.3.4 added
