--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,7 +3,7 @@
     - refactor preprocess protocol to do only downsampling and/or chunking
     - refactor train_vae protocol, remove analysis step and add ctf/poses parse step, add continue option
     - refactor abinitio protocol, add output volume for homogeneous reconstruction
-
+    - new analysis protocol
 3.11: fix pointer to particles (with @pconesa)
 3.10:
     - v2.3.0 added
