update to 3.4.0, update refs

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,4 @@
+3.12.4: add v3.4.0, deprecated v2 support
 3.12.3: v3.3.2 added
 3.12.2: another installer fix
 3.12.1: fix installer, use tags instead of branches
