--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,4 @@
+3.13: add protocol to backproject tilt-series particles from Warp/M
 3.12.4: add v3.4.0, deprecated v2 support
 3.12.3: v3.3.2 added
 3.12.2: another installer fix
